<resources>
    <string name="app_name">Better Waves</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="title_activity_song">songActivity</string>
    <string name="pause_button">Pause</string>
    <string name="play_description">Play</string>
    <string name="base_url">http://192.168.43.165:8000/</string>
    <string name="tab_recommend">Recommended</string>
    <string name="tab_artists">Artists</string>
    <string name="tab_album">Albums</string>
    <string name="tab_songs">All Songs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nothing">Nothing to view</string>
    <string name="song_name_here">Song name here</string>
    <string name="album_name_here">Album Name Here</string>
    <string name="artist_name_here">Artist Name Here</string>
    <string name="email">Email</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="no_time">--:--</string>
    <string name="no_song_loaded">Select a track to play</string>
</resources>
