<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/song_item_whole"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/song_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/list_item_left_padding"
        android:paddingTop="@dimen/list_item_top_padding"
        android:paddingRight="@dimen/list_item_left_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/recommended_song_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:text="@string/song_name_here" />

        <TextView
            android:id="@+id/recommended_song_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="@string/album_name_here" />

        <TextView
            android:id="@+id/recommended_song_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/artist_name_here" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>